--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@eslint/js": "^8.57.0",
     "@types/node": "^20.14.9",
+    "@types/prompts": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "commitlint": "^19.3.0",
