chore: Disable console logging in ESLint configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,9 @@
         "project": "./tsconfig.json"
       },
       "plugins": ["@typescript-eslint"],
-      "rules": {}
+      "rules": {
+        "no-console": "off"
+      }
     }
   ]
 }
