--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/altaskur/AltasType#readme",
   "devDependencies": {
     "@eslint/js": "^8.57.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.14.9",
     "@types/prompts": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
@@ -38,6 +39,8 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "js-yaml": "^4.1.0",
+    "minimist": "^1.2.8",
     "picocolors": "^1.0.1",
     "prompts": "^2.4.2",
     "zod": "^3.23.8"
